# QT-media-player

./: .gitignore  CMakeLists.txt  MediaPlayer.pro  README.md  resources.qrc
qml/: Main.qml  SongDelegate.qml
src/: AlbumArtProvider.cpp  AlbumArtProvider.h  PlayerController.cpp  PlayerController.h  SongFilterProxyModel.cpp  SongFilterProxyModel.h  SongModel.cpp  SongModel.h  main.cpp
